# neural-symbolic-ai-41f3-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: .gitignore  README.md
datasets/: .gitignore  README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: e1_data_efficiency.tex  e3_mitigations.tex  e4_compositional.tex  e5_shortcut.tex
paper_search_results/: diligent_raw.json  neural-symbolic_integration_learning_reasoning_20260628_210528.jsonl  ranked_papers.json
papers/: README.md  arxiv_manifest.json
results/: stats.json  summary_table.csv
results/raw/: e1_e2.json  e3.json  e4.json  e5.json
src/: analyze.py  config.py  data.py  models.py  run_experiments.py  train.py
